--- a/src/shared/styles/globals.css
+++ b/src/shared/styles/globals.css
@@ -1,3 +1,33 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  :root {
+    --background: 250 250 240;
+    --foreground: 26 20 31;
+    --primary: 90 129 250;
+    --primary-foreground: 255 255 255;
+    --secondary: 206 222 255;
+    --secondary-foreground: 0 0 0;
+    --muted: 212 210 213;
+    --muted-foreground: 171 167 175;
+    --accent: 241 241 241;
+    --accent-foreground: 26 20 31;
+    --destructive: 213 26 82;
+    --destructive-foreground: 255 255 255;
+    --border: 171 167 175;
+    --input: 171 167 175;
+    --ring: 26 20 31;
+    --radius: 0.5rem
+  }
+}
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
